--- a/src/assets/scss/utils/internal-variables.scss
+++ b/src/assets/scss/utils/internal-variables.scss
@@ -29,3 +29,6 @@ $logo-size: 70px;
 
 // Google Maps
 $google-maps-height: 300px;
+
+// Material menu
+$mat-menu-container-width: 200px;
